--- a/test/gluino_rhadrons2.cfg
+++ b/test/gluino_rhadrons2.cfg
@@ -9,21 +9,28 @@ process Rec =
            untracked string annotation = "RelVal b jets with pt hat 50-120GeV"
         }
 
-include "Configuration/ReleaseValidation/data/Services.cfi"
-    include "Configuration/StandardSequences/data/FakeConditions.cff"
+    service = RandomNumberGeneratorService {
+      PSet pyth = {
+        untracked uint32 initialSeed = 123456789
+      }
+#   untracked string saveFileName = "SaveState.dat"
+    }
+
     untracked PSet options = {
        include "FWCore/Framework/test/cmsExceptionsFatalOption.cff"
        untracked bool wantSummary = true
        untracked bool makeTriggerResults = true 
  }
 
+include "Configuration/Generator/data/PythiaUESettings.cfi"
+
   module pyth = PythiaProducer {
     untracked bool pythiaVerbosity = true
     untracked int32 pythiaPylistVerbosity = 3
     untracked bool pythiaHepMCVerbosity = true 
     untracked int32 maxEventsToPrint = 2    
-    bool stopHadrons = false
-    bool gluinoHadrons = true
+    untracked bool stopHadrons = false
+    untracked bool gluinoHadrons = true
     PSet PythiaParameters = {
       # This is a vector of ParameterSet names to be read, in this order
       vstring parameterSets = {
@@ -32,7 +39,7 @@ include "Configuration/ReleaseValidation/data/Services.cfi"
       }
 
       # CMS default pythia parameters
-      include "Configuration/Generator/data/PythiaUESettings.cfi"
+      using pythiaUESettingsBlock
 
       # b jets (configuration by Filip Moortgat)
       vstring pythiaGluinoRHadrons = {
@@ -56,15 +63,9 @@ include "Configuration/ReleaseValidation/data/Services.cfi"
     }
   }
 
-  include "FWCore/MessageService/data/MessageLogger.cfi"
-   replace MessageLogger.cerr.threshold = "ERROR"
-   replace MessageLogger.cerr.default.limit = 10
-  
-include "Configuration/StandardSequences/data/Reconstruction.cff"
-include "Configuration/StandardSequences/data/Simulation.cff"
-include "Configuration/StandardSequences/data/MixingNoPileUp.cff" 
-
-include "Configuration/StandardSequences/data/VtxSmearedGauss.cff" 
+#   include "FWCore/MessageService/data/MessageLogger.cfi"
+#   replace MessageLogger.cerr.threshold = "ERROR"
+#   replace MessageLogger.cerr.default.limit = 10
 
   #  path p1 = {psim} # simulation
   #  path p2 = {pdigi} # digitization
