--- a/test/runQuarkonia.cfg
+++ b/test/runQuarkonia.cfg
@@ -1,6 +1,8 @@
 
 process GEN = {
 
+include "GeneratorInterface/Pythia6Interface/data/pythiaDefault.cff"
+
 source = PythiaSource 
 { 
   untracked int32 pythiaPylistVerbosity = 0
@@ -22,19 +24,13 @@ untracked bool DoubleParticle = false
     # The first two are in the include files below
     # The last one are simply my additional parameters
     vstring parameterSets = {
-      "pythiaDefault", 
-      "myParameters"
+      "pythiaDefault" 
     }
 
     # Default (mostly empty - to keep PYTHIA default) card file
     # Name of the set is "pythiaDefault"
-include "GeneratorInterface/Pythia6Interface/data/pythiaDefault.cff"
+    using pythiaDefaultBlock
 
-    # User cards - name is "myParameters"
-    # Pythia's random generator initialization 
-    vstring myParameters = {
-    #  'MRPY(1)= 123456789 ! Automatically random if -1'
-    }
   }
 }
 
