--- a/test/runQuarkonia2.cfg
+++ b/test/runQuarkonia2.cfg
@@ -1,6 +1,8 @@
 
 process GEN = {
 
+include "GeneratorInterface/Pythia6Interface/data/pythiaDefault.cff"
+
 module pyth = PythiaProducer {
   untracked int32 pythiaPylistVerbosity = 0
   untracked bool pythiaHepMCVerbosity = false
@@ -20,19 +22,12 @@ untracked bool DoubleParticle = false
     # The first two are in the include files below
     # The last one are simply my additional parameters
     vstring parameterSets = {
-      "pythiaDefault", 
-      "myParameters"
+      "pythiaDefault"
     }
 
     # Default (mostly empty - to keep PYTHIA default) card file
     # Name of the set is "pythiaDefault"
-include "GeneratorInterface/Pythia6Interface/data/pythiaDefault.cff"
-
-    # User cards - name is "myParameters"
-    # Pythia's random generator initialization 
-    vstring myParameters = {
-    #  'MRPY(1)= 123456789 ! Automatically random if -1'
-    }
+    using pythiaDefaultBlock
   }
 }
 
