make pyinit-related params TRACKED (frame, comenergy); add untracked beam1, beam2

--- a/test/runQuarkonia2.cfg
+++ b/test/runQuarkonia2.cfg
@@ -4,6 +4,10 @@ process GEN = {
 include "GeneratorInterface/Pythia6Interface/data/pythiaDefault.cff"
 
 module pyth = PythiaProducer {
+
+  string pythiaFrame = "NONE"
+  double comEnergy = 14000.
+
   untracked int32 pythiaPylistVerbosity = 0
   untracked bool pythiaHepMCVerbosity = false
   untracked int32 maxEventsToPrint = 0
