slight changes, cleanup

--- a/test/H190_Py6Producer_restore_rndm.cfg
+++ b/test/H190_Py6Producer_restore_rndm.cfg
@@ -1,7 +1,7 @@
 process RESTORE =
 {
 
-untracked PSet maxEvents = { untracked int32 input = 7} # this is related to the "bug-chasing history"
+untracked PSet maxEvents = { untracked int32 input = 6} # this is related to the "bug-chasing history"
                                                         # this way it'll be the 1st even where rndm/repro repairs
 service = Timing {}
 
@@ -33,8 +33,7 @@ service = Timing {}
     
     source = PoolSource
     {
-       ### untracked vstring fileNames = {'file:H190ZZ4mu.root' }
-       untracked vstring fileNames = {'file:test.root' }
+       untracked vstring fileNames = {'file:H190ZZ4mu.root' }
        untracked uint32 skipEvents = 9 # this choice of skip event is actually a "bug-chasing history"...
                                        # this way it'll start from the event where rndm/repro starts breaking
     }
