put in HI updates (pytdist reads from root, etc.)

--- a/test/runQuarkonia.cfg
+++ b/test/runQuarkonia.cfg
@@ -16,6 +16,8 @@ untracked double ymax = 10.
 untracked double Ptmin = 0.
 untracked double Ptmax = 100.
 untracked bool DoubleParticle = false
+untracked int32 ptBinning = 100000
+untracked int32 yBinning = 500
 
 
   PSet PythiaParameters = {
@@ -51,14 +53,13 @@ untracked bool DoubleParticle = false
 #service = TFileService {
 #string fileName = "jpsioutput.root"
 #}
-#
+
 #module ana = HydjetAnalyzer{}
+#path p1 = {ana}
 
     module out = PoolOutputModule { 
 	untracked string fileName = "mcpool.root" 	
     }
-
-#path p1 = {ana}
 
     endpath p = { out }
 }
