--- a/test/runQuarkonia2.cfg
+++ b/test/runQuarkonia2.cfg
@@ -19,6 +19,8 @@ untracked double ymax = 10.
 untracked double Ptmin = 0.
 untracked double Ptmax = 100.
 untracked bool DoubleParticle = false
+untracked int32 ptBinning = 100000
+untracked int32 yBinning = 500
 
   PSet PythiaParameters = {
 
