FileInPath modified in PtYDistributor

--- a/test/runQuarkonia2.cfg
+++ b/test/runQuarkonia2.cfg
@@ -13,7 +13,8 @@ module pyth = PythiaProducer {
   untracked int32 maxEventsToPrint = 0
 
 untracked int32 ParticleID = 443
-untracked string kinematicsFile = "jpsipbpb"
+untracked string kinematicsFile = "HeavyIonsAnalysis/Configuration/data/jpsipbpb.root"
+
 untracked double ymin = -10.
 untracked double ymax = 10.
 untracked double Ptmin = 0.
