--- a/test/runQuarkonia.cfg
+++ b/test/runQuarkonia.cfg
@@ -10,7 +10,12 @@ source = PythiaSource
   untracked int32 maxEventsToPrint = 0
 
 untracked int32 ParticleID = 443
-untracked string kinematicsFile = "jpsipbpb"
+untracked string kinematicsFile = "HeavyIonsAnalysis/Configuration/data/jpsipbpb.root"
+
+#  untracked int32 ParticleID = 553
+#  untracked string kinematicsFile = "HeavyIonsAnalysis/Configuration/data/upsipbpb.root"
+
+
 untracked double ymin = -10.
 untracked double ymax = 10.
 untracked double Ptmin = 0.
@@ -47,7 +52,10 @@ untracked int32 yBinning = 500
 
     service = RandomNumberGeneratorService {
 	#this sets the random number seed used by Pythia
-	untracked uint32 sourceSeed = 123456789 
+
+	PSet theSource = {
+		untracked uint32 initialSeed = 123456789 
+ 	}
     }
 
 #service = TFileService {
